--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-1.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-1.html
@@ -208,7 +208,7 @@ function tampilkanSoal(){
         tampilkanPopupHasil(`
             🎉 Selesai!<br>
             Benar: ${benar}/${soal.length}<br>
-            Nilai: <span class="nilai-besar ${warnaNilai}">${nilai}%</span>
+            Nilai: <span class="nilai-besar ${warnaNilai}">${nilai}</span>
             <span class="${warnaPeringkat}">${peringkat}</span>
         `, kelasPopup);
         return;
