--- a/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-1.html
+++ b/kelas-5/istanap-pancasila/sejarah-kelahiran-pancasila/soal/Latihan-Soal-1.html
@@ -141,7 +141,7 @@ button:hover {
 
 <!-- Suara -->
 <audio id="suaraTyping" src="../../../../suara/typing.mp3"></audio>
-<audio id="suaraNext" src="../../../../suara/next.mp3"></audio>
+<audio id="suaraNext" src="../../../../suara/blub.mp3"></audio>
 <audio id="suaraUlangi" src="../../../../suara/ulangi.mp3"></audio>
 <audio id="suaraKlik" src="../../../../suara/mouse-clicks.mp3"></audio>
 <audio id="suaraPeringatan" src="../../../../suara/tada-234709.mp3"></audio>
